# parity-scale-codec

./: .drone.yml  .gitignore  Cargo.toml
derive/: Cargo.toml
derive/src/: decode.rs  lib.rs  trait_bounds.rs
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
sgx/parity-scale-codec-sgx-test/: Makefile  make_pub.diff
sgx/parity-scale-codec-sgx-test/app/: Cargo.toml
sgx/parity-scale-codec-sgx-test/enclave/: Cargo.toml
sgx/parity-scale-codec-sgx-test/enclave/src/: bit_vec.rs  compact.rs  lib.rs
src/: bit_vec.rs  codec.rs  lib.rs
