[package]
name = "codec-fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2018"
publish = false

[dependencies]
parity-scale-codec = { path = "../", features = [ "derive", "bit-vec" ] }
honggfuzz = "0.5.45"
bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx.git", tag = "sgx_1.0.9", features = ["alloc"] }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
